syntax = "proto3";

package GrpcEvents;

service EventsService {
    rpc Subscribe (stream SubscribeRequest) returns (stream SampleEventArgsMessage) {}
}

message SubscribeRequest {
    bool start_stop = 1; // true for subscribe, false for unsubscribe
    string account_name = 2;
}

message SampleEventArgsMessage {
    string account_name = 1;
    string sender = 2;
}
